k8s/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mfe-host
spec:
  type: ClusterIP
  selector:
    app: mfe-host
  ports:
    - name: http
      port: 80
      targetPort: 80
